--- a/main.css
+++ b/main.css
@@ -42,10 +42,12 @@ nav h2{
 
 .home-section{
     display: flex;
+    /* flex-shrink: 0; */
     justify-content: space-between;
     min-height: calc(100vh - 65px);
 }
 article.home-projects{
+    /* flex-shrink: 0; */
     background-color: rgb(58, 58, 58);
     /* color: #d42a2a; */
     width: 33.333333%;
@@ -70,6 +72,7 @@ article.home-projects:hover{
 
 .home-projects p{
     position: relative;
+    /* flex-shrink: 0; */
     top: 45%;
     text-align: center;
     margin: auto;
@@ -152,6 +155,7 @@ article.lab-projects:hover{
 
 .project-section{
     display: flex;
+    flex-direction: column;
     background-color: #E4E0DB;
     height: 975px;
     /* justify-content: center; */
@@ -167,9 +171,10 @@ article.lab-projects:hover{
 
 .each-project h1{
     /* position: relative; */
+
     
-  margin-left: 200px;
-  margin-top: 50px;
+  margin-left: 76px;
+  margin-top: 74px;
     /* margin: auto; */
     /* font-family: "Open Sans", sans-serif; */
     font-family: 'Roboto', sans-serif;
@@ -181,13 +186,77 @@ article.lab-projects:hover{
 .each-project h2{
     /* position: relative; */
     
-  margin-left: 500px;
-  margin-bottom: 800px;
-  /* margin-top: 50px; */
+  margin-left: 355px;
+  margin-top: -40px;
     /* margin: auto; */
-    /* font-family: "Open Sans", sans-serif; */
+    font-family: "Open Sans", sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
+    font-size: 30px;
+    color: #232220;
+}
+
+.each-project img{
+
+    width: 1000px;
+    height: 650px;
+    margin-left: 78px;
+    
+}
+.description h3{
+    margin-top: -661px;
+    margin-left: 1110px;
+    margin-right: 40px;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    font-size: 25px;
     color: #232220;
+    /* font-size: 45px; */
+}
+
+.description p{
+    margin-top: 18px;
+    margin-left: 1110px;
+    margin-right: 40px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: thin;
+    color: #232220;
+    /* font-size: 45px; */
+
+}
+
+.second-part p{
+    margin-top: -430px;
+    margin-left: 1110px;
+    margin-right: 40px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: thin;
+    color: #232220;
+    /* font-size: 45px; */
+
+}
+
+
+.project-buttons button{
+    position: absolute;
+    justify-content: space-between;
+    background-color: #232220;
+    margin-left: 78px;
+    bottom: 14%;
+}
+
+
+#proj{
+    color: #ffffff;
+}
+
+.code-buttons button{
+    position: absolute;
+    justify-content: space-between;
+    background-color: #232220;
+    margin-left: 250px;
+    bottom: 14%;
+}
+
+
+#code{
+    color: #ffffff;
 }
