--- a/main.css
+++ b/main.css
@@ -2,22 +2,23 @@
     margin: 0;
     padding: 0;
 }
-body{
-    color: #e4dbdb;
-}
+
 .navbar{
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
     height: 65px;
     display: flex;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    justify-content:flex-start;
     align-items: center;
-    background-color: rgb(102, 102, 102);
+    background-color: #E9E9E7;
+      
 }
 
 #logo{
-    font-size: 24px;
-    width:40%;
-    padding-left: 5rem;
-    color: #E4E0DB;
+    margin-left: 20px;
+    font-size: 36px;
+    color: black;
 }
 
 #lab{
@@ -48,6 +49,7 @@ body{
 a{
     text-decoration: none;
 }
+
 nav h2{
    width:60%;
    margin-left: fit-content;
